<resources>
    <string name="app_name">Lost Objects\nApp</string>
    <string name="web_client_id">506654347126-pg4jbhh9ahs0vv5ondrk0umeet9pnhmp.apps.googleusercontent.com</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- General labels -->
    <string name="description_login">Pantalla de inicio de sesión</string>
    <string name="description_back">Botón regresar</string>
    <string name="txt_input_email">Correo electrónico</string>
    <string name="txt_input_password">Contraseña</string>

    <!-- Forms -->
    <string name="txt_input_name">Nombre</string>
    <string name="txt_input_lastname_1">Primer apellido</string>
    <string name="txt_input_lastname_2">Segundo apellido (opcional)</string>
    <string name="txt_input_number_phone">Teléfono</string>

    <!-- Labels for fragments -->
    <string name="presentation_fragment_label">Presentation fragment</string>
    <string name="login_fragment_label">Login fragment</string>
    <string name="register_fragment_label">Register fragment</string>
    <string name="recovery_pass_fragment_label">Recovery pass fragment</string>
    <string name="logo_tecnm_content_description">Logo Tecnm</string>

    <!-- Texts for presentation -->
    <string name="title_tec_1">INSTITUTO TECNOLÓGICO SUPERIOR</string>
    <string name="title_tec_2">DE CIUDAD HIDALGO</string>
    <string name="txt_button_sign_in">Iniciar sesión</string>
    <string name="txt_button_sign_up">Registrarse</string>

    <!-- Texts for login -->
    <string name="txt_title_login">Inicio de sesión</string>
    <string name="txt_button_login">Ingresar</string>
    <string name="txt_options_login">O inicia sesión usando:</string>
    <string name="txt_button_forgot_password">Olvidé mi contraseña</string>
    <string name="txt_button_wish_register">Quiero registrarme</string>
    <string name="description_button_google">Iniciar con google</string>

    <!-- Texts for register -->
    <string name="txt_title_register">Registro de usuario</string>
    <string name="txt_general_data">Datos generales</string>
    <string name="txt_school_data">Datos escolares</string>
    <string name="txt_credentials_data">Credenciales de acceso</string>
    <string name="txt_message_1">*Si no eres estudiante, puedes omitir los siguientes tres campos.</string>
    <string name="txt_message_2">*Si aún no tienes asignado un número de control, usa tu CURP o deja vacío el campo.
    </string>
    <string name="txt_button_register">Registrarse</string>

    <!-- Texts for reset password -->
    <string name="txt_title_recovery_pass">Recuperación de contraseña</string>
    <string name="txt_message_recovery_pass">Enviaremos un enlace a tu correo electrónico para restablecer la
        contraseña.
    </string>
    <string name="txt_button_send_reset_email">Enviar correo</string>

    <!-- Texts for home -->
    <string name="home_fragment_label">Inicio</string>
    <string name="lost_objects_fragment_label">Objetos perdidos</string>
    <string name="found_objects_fragment_label">Objetos encontrados</string>
    <string name="report_fragment_label">Levantar reporte</string>
    <string name="action_sign_out">Cerrar sesión</string>
    <string name="action_profile">Mi perfil</string>
    <string name="action_my_reports">Mis reportes</string>
    <string name="create_report">Crear reporte</string>

    <!-- Texts for report -->
    <string name="user_photo">Foto de usuario</string>
    <string name="txt_title_date_report">Fecha:</string>
    <string name="txt_title_report_type">Tipo de reporte:</string>
    <string name="txt_radio_1">Encontré un objeto</string>
    <string name="txt_radio_2">Perdí un objeto</string>
    <string name="txt_title_object_report">Objeto:</string>
    <string name="txt_input_object_report">Título descriptivo</string>
    <string name="txt_title_description_report">Descripción:</string>
    <string name="txt_title_location_report">Ubicación:</string>
    <string name="txt_title_date_object_report">Fecha:</string>
    <string name="txt_input_description_report">Describe el objeto que encontraste o perdiste</string>
    <string name="txt_location_input_report">Lugar donde perdiste o encontraste el objeto</string>
    <string name="txt_title_image_report">Imagen: (opcional)</string>
    <string name="txt_image_report">*Se recomienda añadir una imagen para que las demás personas puedan identificar el objeto más fácilmente.</string>
    <string name="txt_description_button_image">Añadir imagen</string>
    <string name="txt_button_send_report">Publicar objeto</string>
    <string name="image_object">Imagen de objeto</string>
    <string name="delete_image_report">Eliminar imagen</string>

    <!-- Texts for short card lost object -->
    <string name="title_lost_object">Perdí: %s</string>
    <string name="description_lost_object">Descripción del objeto: %s</string>
    <string name="see_report_lost_object">Ver reporte completo</string>

    <!-- Texts for short card found object -->
    <string name="location_found_object">Encontrado en: %s</string>
    <string name="see_details_found_object">Ver detalles</string>

    <!-- Texts for full card report object -->
    <string name="date_full_report">Fecha: %s</string>
    <string name="object_full_report">Objeto: %s</string>
    <string name="description_full_report">Detalles: %s</string>
    <string name="location_full_report">Ubicación: %s</string>
    <string name="txt_contact_full_report">Contactar por:</string>
    <string name="description_whatsapp_full_report">Whatsapp</string>
    <string name="description_phone_full_report">Teléfono</string>
    <string name="description_message_full_report">Mensaje de texto</string>
    <string name="btn_back_full_report">Volver</string>

    <!-- Texts for general reports -->
    <string name="text_all_found_objects">Todos los objetos perdidos</string>
    <string name="text_all_lost_objects">Todos los objetos encontrados</string>
    <string name="reload">Recargar</string>
    <string name="recent_lost_objects">Objetos perdidos recientemente</string>
    <string name="recent_found_objects">Objetos encontrados recientemente</string>
    <string name="see_all">Ver todos</string>
    <string name="description_profile">Perfil de usuario</string>
    <string name="txt_button_edit_profile">Guardar cambios</string>

    <!-- Texts for my reports -->
    <string name="title_activity_my_reports">Mis reportes</string>
    <string name="tab_text_1">Encontrados</string>
    <string name="tab_text_2">Perdidos</string>
    <string name="btn_delete_report">Marcar como devuelto</string>

</resources>