<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.home.ReportFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:contentDescription="@string/report_fragment_label"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/linear_layout_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/photo_user"
                    android:contentDescription="@string/user_photo"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/username_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:fontFamily="@font/tahoma2" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_layout_report_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_report"
                android:layout_marginTop="10dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout_report"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/arial_narrow_7"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/txt_title_date_report" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_date_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout_report"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/arial_narrow_7"
                    android:textSize="18sp" />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title_type_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_report_2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/arial_narrow_7"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/txt_title_report_type" />
            <RadioGroup
                android:id="@+id/radio_group_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_type_report"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/radio_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_radio_1" />

                <RadioButton
                    android:id="@+id/radio_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_radio_2" />
            </RadioGroup>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title_object_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/radio_group_report"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/arial_narrow_7"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/txt_title_object_report" />
            <EditText
                android:id="@+id/txt_object_report"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_object_report"
                android:hint="@string/txt_input_object_report"
                android:autofillHints="" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title_description_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txt_object_report"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/arial_narrow_7"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/txt_title_description_report" />
            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_view_description_report"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_description_report"
                android:layout_height="100dip">
                <EditText
                    android:id="@+id/text_description_report"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:gravity="bottom"
                    android:inputType="text|textMultiLine"
                    android:hint="@string/txt_input_description_report"
                    android:autofillHints="" />
            </androidx.core.widget.NestedScrollView>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title_location_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/scroll_view_description_report"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/arial_narrow_7"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/txt_title_location_report" />
            <EditText
                android:id="@+id/txt_location_report"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_location_report"
                android:hint="@string/txt_location_input_report"
                android:inputType="text"
                android:autofillHints="" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title_image_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txt_location_report"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/arial_narrow_7"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/txt_title_image_report" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_image_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_image_report"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/arial_narrow_7"
                android:textSize="16sp"
                android:text="@string/txt_image_report" />
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_image_report"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_image_report"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/add_image"
                android:contentDescription="@string/txt_description_button_image"
                android:layout_marginTop="10dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>