<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/description_profile"
    android:fillViewport="true"
    tools:context=".ProfileActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back_profile"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@android:color/transparent"
            android:src="@drawable/back"
            android:contentDescription="@string/btn_back_full_report"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_back_profile"
            android:text="@string/description_profile"
            android:textSize="24sp"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:textAlignment="center"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/photo_profile"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintTop_toBottomOf="@+id/title_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:src="@drawable/photo_user"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_data_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/photo_profile"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/txt_credentials_data"/>
        <EditText
            android:id="@+id/txt_name_profile"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintTop_toBottomOf="@+id/title_data_profile"
            android:layout_margin="20dp"
            android:inputType="text"
            android:fontFamily="@font/dubai_medium"
            android:hint="@string/txt_input_name"
            android:textSize="18sp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/txt_lastname_1_profile"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_name_profile"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="text"
            android:fontFamily="@font/dubai_medium"
            android:hint="@string/txt_input_lastname_1"
            android:textSize="18sp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/txt_lastname_2_profile"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_lastname_1_profile"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="text"
            android:fontFamily="@font/dubai_medium"
            android:hint="@string/txt_input_lastname_2"
            android:textSize="18sp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/txt_phone_profile"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_lastname_2_profile"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="phone"
            android:fontFamily="@font/dubai_medium"
            android:hint="@string/txt_input_number_phone"
            android:textSize="18sp"
            android:autofillHints="" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_credentials_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone_profile"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/txt_credentials_data"/>
        <EditText
            android:id="@+id/txt_email_profile"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintTop_toBottomOf="@+id/title_credentials_profile"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/dubai_medium"
            android:hint="@string/txt_input_email"
            android:textSize="18sp"
            android:clickable="false"
            android:focusable="false"
            android:autofillHints="" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_profile"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="4dp"
            app:cornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_email_profile"
            android:textSize="18sp"
            android:text="@string/txt_button_edit_profile"
            android:fontFamily="@font/dubai_medium"
            android:textStyle="bold"
            android:textAllCaps="false" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>