<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_login"
            app:startDestination="@id/PresentationFragment">
    <fragment
            android:id="@+id/PresentationFragment"
            android:name="mx.tecnm.cdhidalgo.lostobjectsapp.fragments.PresentationFragment"
            android:label="@string/presentation_fragment_label"
            tools:layout="@layout/fragment_presentation"
    >
        <action
            android:id="@+id/action_PresentationFragment_to_LoginFragment"
            app:destination="@+id/LoginFragment"/>
        <action
            android:id="@+id/action_PresentationFragment_to_RegisterFragment"
            app:destination="@+id/RegisterFragment"/>
        
    </fragment>
    
    <fragment
            android:id="@+id/LoginFragment"
            android:name="mx.tecnm.cdhidalgo.lostobjectsapp.fragments.LoginFragment"
            android:label="@string/login_fragment_label"
            tools:layout="@layout/fragment_login"
    >
        <action
            android:id="@+id/action_LoginFragment_to_RecoveryPassFragment"
            app:destination="@+id/RecoveryPassFragment"/>
        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment"/>
        <action
            android:id="@+id/action_LoginFragment_to_PresentationFragment"
            app:destination="@id/PresentationFragment"/>
    </fragment>
    
    <fragment
            android:id="@+id/RecoveryPassFragment"
            android:name="mx.tecnm.cdhidalgo.lostobjectsapp.fragments.RecoveryPassFragment"
            android:label="@string/recovery_pass_fragment_label"
            tools:layout="@layout/fragment_recovery_pass"
    >
        <action
            android:id="@+id/action_RecoveryPassFragment_to_LoginFragment"
            app:destination="@+id/LoginFragment"/>
    </fragment>
    
    <fragment
            android:id="@+id/RegisterFragment"
            android:name="mx.tecnm.cdhidalgo.lostobjectsapp.fragments.RegisterFragment"
            android:label="@string/register_fragment_label"
            tools:layout="@layout/fragment_register"
    >
        <action
            android:id="@+id/action_RegisterFragment_to_LoginFragment"
            app:destination="@+id/LoginFragment"/>
    </fragment>
</navigation>