<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.PresentationFragment">
    
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            >
        <ImageView
                android:id="@+id/logo_tecnm"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/logo_tecnm_content_description"
                android:src="@drawable/logo_tecnm_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        />
        
        <ImageView
                android:id="@+id/logo_itsch"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/logo_tecnm_content_description"
                android:src="@drawable/logo_tec_hidalgo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/logo_itsch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        >
            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_title_tec_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/title_tec_1"
                    android:textSize="20sp"
                    android:fontFamily="@font/dubai_medium"
                    android:textStyle="bold"
            />
            
            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_title_tec_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_tec_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/title_tec_2"
                    android:fontFamily="@font/dubai_medium"
                    android:textStyle="normal"
            />
            
            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_title_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_tec_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/app_name"
                    android:textSize="28sp"
                    android:fontFamily="@font/arial_rounded_mt_bold"
                    android:textStyle="bold"
                    android:textAlignment="center"
            />
            
            <ImageView
                    android:id="@+id/logo_app"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="30dp"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/logo_tecnm_content_description"
                    android:src="@drawable/logo_app"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_app"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
            />
            
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_in_presentation"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:strokeWidth="4dp"
                    app:cornerRadius="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/logo_app"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/txt_button_sign_in"
                    android:fontFamily="@font/dubai_medium"
                    android:textStyle="bold"
            />
            
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_up_presentation"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:strokeWidth="4dp"
                    app:cornerRadius="20dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_presentation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/txt_button_sign_up"
                    android:fontFamily="@font/dubai_medium"
                    android:textStyle="bold"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.constraintlayout.widget.ConstraintLayout>
            

</androidx.core.widget.NestedScrollView>